--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=KoHo:wght@200;300;400;500;600;700&display=swap');
 * {
-    margin: 0;    
-    padding: 0;
-    list-style: none;
     font-family: 'KoHo', sans-serif;
 }
+
+body {
+    background-image: url(/assets/img/fondo2.jpg);
+    background-size: cover;
+    }
 
 .lengu {
     font-size: 2em;
@@ -13,6 +15,11 @@
 .h1 {
     font-size: 5em;
 }
+
+.bg-asd {
+    background-color: rgba(157, 189, 240, 0.769);
+}
+
 
 /* .asd {
     height: auto;
