--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(/assets/img/fondo2.jpg);
+    background-image: url(/assets/img/fondo.jpg);
     background-size: cover;
     }
 
