--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -4,8 +4,10 @@
 }
 
 body {
-    background-image: url(/assets/img/fondo1.jpg);
-    background-size: cover;
+    background: #8360c3;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2ebf91, #8360c3);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2ebf91, #8360c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     }
 
 .lengu {
